completed some stretch, nav bar fixed and opacity as well as button animation

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,20 @@
+@keyframes click {
+  0% {
+    background-color: #F6F6F6;
+  }
+  25% {
+    background-color: #00ffd5;
+  }
+  50% {
+    background-color: #2c2cc7;
+  }
+  75% {
+    background-color: #159cb4;
+  }
+  100% {
+    background-color: #0a25bd;
+  }
+}
 .navfont {
   font-family: 'Ubuntu', sans-serif;
   color: #454A59;
@@ -9,12 +26,15 @@
   color: #F6F6F6;
   font-size: 1.8rem;
   width: 12rem;
-  height: 40px;
+  height: 4rem;
   cursor: pointer;
   outline: none;
   background-color: #22283A;
   border: none;
   border-radius: 0.5rem;
+  animation-name: click;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -180,6 +200,9 @@ p {
 }
 .top {
   width: 100%;
+  position: fixed;
+  top: 0;
+  opacity: 0.85;
   color: #22283B;
   background: #f4f4f4;
   padding: 20px 0;
@@ -211,6 +234,9 @@ p {
   text-decoration: none;
   font-size: 1.5rem;
 }
+.top .navbar a:hover {
+  color: red;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -220,6 +246,14 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home .intro {
+  margin-top: 15%;
+}
+@media (max-width: 500px) {
+  .home .intro {
+    margin-top: 25%;
+  }
 }
 .home .intro img {
   border-radius: 0.5rem;
@@ -301,12 +335,15 @@ footer {
   color: #F6F6F6;
   font-size: 1.8rem;
   width: 12rem;
-  height: 40px;
+  height: 4rem;
   cursor: pointer;
   outline: none;
   background-color: #22283A;
   border: none;
   border-radius: 0.5rem;
+  animation-name: click;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
