--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,10 @@
 .home {
 
   .intro {
+    margin-top: 15%;
+    @media @phone {
+      margin-top: 25%;
+    }
     img{
       border-radius: .5rem;
       width: 100%;
