--- a/less/mixins.less
+++ b/less/mixins.less
@@ -12,10 +12,13 @@
     color: @wild-sand;
     font-size: 1.8rem;
     width: 12rem;
-    height: 40px;
+    height: 4rem;
     cursor: pointer;
     outline: none;
     background-color: @btn-bg-color;
     border: none;
     border-radius: .5rem;
+    animation-name: click;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
 }
