--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,9 @@
 // Navigation code here
 .top {
     width: 100%;
+    position: fixed;
+    top: 0;
+    opacity: .85;
     color: #22283B;
     background: #f4f4f4;
     padding: 20px 0;
@@ -24,6 +27,9 @@
             }
           a {
              .navfont();
+          }
+          a:hover {
+            color: red;
           }
         }
     }
